--- a/style.css
+++ b/style.css
@@ -51,3 +51,46 @@ span::before{
 .self-intro-animated{
     display: none;
 }
+
+.skill-div-1{
+    
+    border:3px solid;
+    animation:border 3s;
+    
+}
+.skill-div-2{
+    
+    border:3px solid;
+    animation:border 3s 3s;
+    
+}
+.skill-div-3{
+    
+    border:3px solid;
+    animation:border 3s 6s;
+    
+}
+.skill-div-4{
+    
+    border:3px solid;
+    animation:border 3s 9s;
+    
+}
+
+@keyframes border{
+    
+    0%{
+        opacity:0;
+        background-color:white;
+        color:black;
+        transform:translateX(+60px);
+    }
+    
+    100%{
+        opacity:1;
+        background-color:royalblue;
+        color:white;
+        transform:translateX(0);
+    }
+    
+}
